@@ -3,6 +3,7 @@
 
 Version 5.1.45
 
+  - Fix for Bug#87704 (26771560), THE STREAM GETS THE RESULT SET ?THE DRIVER SIDE GET WRONG ABOUT GETLONG().
 
 Version 5.1.44
 
